removed spring security dependencies, user controller working

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,6 @@ spring:
     driver-class-name: org.sqlite.JDBC
   jpa.show-sql: true
   jpa.properties.hibernate.dialect: org.hibernate.community.dialect.SQLiteDialect
+
+
+# management.info.env.enabled: true
