--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,12 @@
 		    <artifactId>hibernate-community-dialects</artifactId>
 		    <version>6.5.0.Final</version>
 		</dependency>
-	</dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>	
+  </dependencies>
 
 	<build>
 		<plugins>
